--- a/_data/navigation/en_US.yml
+++ b/_data/navigation/en_US.yml
@@ -13,6 +13,9 @@ main:
     title: Uninstall Phi
     url: uninstall-phi
   -
+    title: Troubleshooting
+    url: troubleshooting
+  -
     title: Credits
     url: credits
   -
