--- a/_config.yml
+++ b/_config.yml
@@ -296,13 +296,18 @@ defaults:
       permalink: /:basename:output_ext
       lang: en
   - scope:
-      path: "_pages/en_US/home.md"
-      type: pages
-    values:
-      permalink: /index:output_ext
-  - scope:
       path: "_pages/fr_FR"
       type: pages
     values:
       permalink: /fr_FR/:basename:output_ext
       lang: fr
+  - scope:
+      path: "_pages/en_US/home.md"
+      type: pages
+    values:
+      permalink: /index:output_ext
+  - scope:
+      path: "_pages/fr_FR/home.txt"
+      type: pages
+    values:
+      permalink: /fr_FR/index:output_ext
