--- a/_data/navigation/fr_FR.yml
+++ b/_data/navigation/fr_FR.yml
@@ -10,7 +10,7 @@ main:
     title: Dépannage
     url: troubleshooting
   -
-    title: Restaurer le firmware original
+    title: Restaurer le firmware d'origine
     url: restore-stock-firmware
   -
     title: Contribuer
